<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".gameType.FindAnswerActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/enter_your_question"
        />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="50dp"
            style="?android:progressBarStyleHorizontal"
            android:progress="0"
            android:max="5"
            />
        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1/5"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/black"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/opt_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option1"
        android:background="@drawable/question_option"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        />
<androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/opt_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option2"
        android:background="@drawable/question_option"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        />
<androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/opt_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option3"
        android:background="@drawable/question_option"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        />
<androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/opt_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option4"
        android:background="@drawable/question_option"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/submit"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/submit_button"/>




</androidx.appcompat.widget.LinearLayoutCompat>